--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "test": "vitest"
+  },
   "dependencies": {
-    "cac": "^6.7.12"
+    "mri": "^1.2.0",
+    "vitest": "^0.17.0"
   }
 }
